Login and register popup window on page. Add admin panel.

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -117,3 +117,8 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+.fb {
+    background-color: #3B5998;
+    color: white;
+}
