--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,21 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Calligraffitti&display=swap');
-
+/*RESET*/
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
 }
 
+/*Element niewidoczny*/
 .display-none{
     display:none;
+}
+
+/*Wyśrodkowana kolumna*/
+.column{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+/*Wyśrodkowanie wierz*/
+.row{
+    display:flex;
+    justify-content: center;
 }
 
 body{
     width:1350px;
     margin:0 auto;
 }
-
-
 
 /*Nawigacja*/
 
@@ -398,4 +411,54 @@ input[type=submit]:hover {
 
 .modal-offer .modal-footer button:hover{
     background: linear-gradient(0deg, rgba(0,252,42,1) 0%, rgba(12,152,28,1) 100%);
+}
+
+/*Formularze i przyciski w panelu administratora*/
+.locationform form {
+    width: 675px;
+    margin: 0 auto;
+}
+
+.locationform form input{
+    width:100%;
+}
+
+.locationform button, .offerform button, .cars button{
+    width:200px;
+    margin:0 auto;
+}
+
+.offerform input{
+    width:675px;
+    height: 48px;
+    padding:12px;
+    margin:0 auto 10px auto;
+}
+
+.offerform .centerform{
+    width:50%;
+    margin:0 auto;
+}
+
+.carform{
+    padding:15px;
+}
+
+.carform form{
+    width:250px;
+    margin:0 auto;
+}
+
+.carform button{
+    width:200px;
+    margin-top:10px;
+}
+
+
+
+
+
+/*Marginesy*/
+.margin-right10{
+    margin-right:10px;
 }
