--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -355,6 +355,7 @@ input[type=submit]:hover {
 }
 
 .modal-offer .modal-body {
+    position:relative;
     background-color: rgb(250, 237, 237);
     padding: 20px;
 }
@@ -367,6 +368,7 @@ input[type=submit]:hover {
 .modal-offer .modal-body img{
     width:760px;
     height: 300px;
+    padding-left:30px;
 }
 
 
@@ -412,6 +414,33 @@ input[type=submit]:hover {
 
 .modal-offer .modal-footer button:hover{
     background: linear-gradient(0deg, rgba(0,252,42,1) 0%, rgba(12,152,28,1) 100%);
+}
+
+.button-prev, .button-next{
+    width:50px;
+    height:50px;
+    border: none;
+    border-radius: 50%;
+    background-color: rgba(0,0,0,.8);
+    color:white;
+    font-size: 20px;
+}
+
+.button-prev{
+    position: absolute;
+    top: 20%;
+    left: 0;
+}
+
+.button-next{
+    position: absolute;
+    top: 20%;
+    right: 0;
+}
+
+.modal-gallery{
+    width:800px;
+    margin:0 auto;
 }
 
 /*Formularze i przyciski w panelu administratora*/
